--- a/templates/home.html
+++ b/templates/home.html
@@ -7,20 +7,19 @@
     <h1>Welcome to the Home Page</h1>
     <p>All Observations Links:</p>
     <ul>
-        <li><a href="{% url 'observation_update' %}">Update Observation List</a></li>
+        <li><a href="{% url 'observation_list_readonly' %}">List of Observation  </a></li>
+        <li><a href="{% url 'observation_list' %}">Update Observation</a></li>
+        
         <li><a href="{% url 'observation_create' %}">Create Observation</a></li>
         <li><a href="{% url 'delete_observation' %}">Delete Observation</a></li>
-        <li><a href="{% url 'observation_list_readonly' %}">View Observation List </a></li>
+        
     </ul>
     
     <p>All Rocks Links:</p>
     <ul>
-        <li><a href="{% url 'rock_list' %}">List of Rocks</a></li>
+        <li><a href="{% url 'rock_list_read' %}">List of Rocks </a></li>
+        <li><a href="{% url 'rock_list' %}">Update Rocks </a></li>
         <li><a href="{% url 'rock_create' %}">Create Rock</a></li>
-        
-        
-        
-
         <li><a href="{% url 'rock_delete' %}">Delete Rock</a></li>
     </ul>
 </body>
